<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Authenticator+</string>
    <string name="app_name_short">Authenticator+</string>
    <string name="enter_key_title">Manual account entry</string>
    <string name="enter_key_page_add_button">Add</string>
    <string name="button_add_account">Add an account</string>
    <string name="button_how_it_works">See how it works</string>
    <string name="add_account_menu_item">Add account</string>
    <string name="how_it_works_menu_item">How it works</string>
    <string name="main_preference_screen_title">Settings</string>
    <string name="about_preference_title">About</string>
    <string name="settings_menu_item">Settings</string>
    <string name="button_add_account_manual_entry">Manually add account</string>
    <string name="button_add_account_scan_barcode">Scan barcode</string>
    <string name="button_next">Next</string>
    <string name="button_back">Back</string>
    <string name="enter_account_label">Enter account name</string>
    <string name="enter_key_hint">Enter your key</string>
    <string name="enter_key_too_short">Key value is too short</string>
    <string name="enter_key_illegal_char">Key value has illegal character</string>
    <string name="error_title">Error</string>
    <string name="error_uri">Key not recognized.</string>
    <string name="error_qr">Cannot interpret QR code.</string>
    <string name="secret_saved">Secret saved</string>
    <string name="save_key_message">Save key for</string>
    <string name="error_empty_secret">Cannot save empty secret</string>
    <string name="enter_pin">
    Enter this verification code if prompted during account sign-in:
    </string>
    <string name="check_code_title">Integrity check value</string>
    <string name="check_code_menu_item">Check key value</string>
    <string name="install_dialog_title">Install barcode scanner?</string>
    <string name="install_dialog_message">
    To scan barcodes containing keys, you must install the ZXing barcode scanner.
    </string>
    <string name="install_button">Install</string>
    <string name="about_preference_screen_title">About</string>
    <string name="version_preference_title">Version</string>
    <string name="opensource_preference_title">View source</string>
    <string name="opensource_page_url">https://github.com/Tortel/authenticator</string>
    <string name="check_code">
    To check that you have the correct key value for <xliff:g example="mallory@gmail.com" id="account">%1$s</xliff:g>
    verify that the value here matches the integrity check value provided
    by the server:&lt;br/>
    </string>
    <string name="general_security_exception">General security exception</string>
    <string name="decoding_exception">Decoding exception</string>
    <string name="submit">Save</string>
    <string name="cancel">Cancel</string>
    <string name="context_menu_remove_account">Remove</string>
    <string name="remove_account_dialog_button_remove">Remove account</string>
    <string name="remove_account_dialog_title">
    Remove <xliff:g example="mallory@gmail.com" id="account">%1$s</xliff:g>?
    </string>
    <string name="remove_account_dialog_message">
    <![CDATA[
    <html><body>
    <p>
      Removing this account will <b>remove your ability</b> to generate codes, however, it will
      <b>not</b> turn off 2-factor authentication. This may prevent you from signing into your
      account.
    </p>
    <p>
      Before removing:
    </p>
    <p>
      Turn off 2-factor authentication for this account or
      ensure you have an alternate mechanism for generating codes.
    </p>
    </body>
    </html>
    ]]>
    </string>
    <string name="remove_google_account_dialog_message">
    <![CDATA[
      Removing this account will <b>remove your ability</b> to generate codes, however, it will
      <b>not</b> turn off 2-step verification. This may prevent you from signing into your account.
      <p>
      Before removing:
      <ul>
        <li>Turn off 2-step verification for this account, or</li>
        <li>Ensure you have an alternate mechanism for generating codes.</li>
      </ul>
    ]]>
    </string>
    <string name="rename">Rename</string>
    <string name="rename_message">Rename <xliff:g example="mallory@gmail.com" id="account">%1$s</xliff:g></string>
    <string name="error_exists">Sorry, that name is already in use.</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="counter_pin">Get code</string>
    <string name="empty_pin">_ _ _ _ _ _</string>
    <string name="ok">OK</string>
    <string name="type_prompt">Type of key</string>
    <string-array name="type">
        <item>Time based</item>
        <item>Counter based</item>
    </string-array>
    <string name="button_uninstall_old_app">Uninstall</string>
    <string name="howitworks_page_enter_password_title">
    To sign in, you\'ll enter your password.
    </string>
    <string name="howitworks_page_enter_password_details">
    However, if you\'re at a new computer or device, you will be asked for a special code to make
    sure it\'s really you.
    </string>
    <string name="howitworks_page_enter_code_title">
    If you\'re on a new computer, enter a code from your phone.
    </string>
    <string name="howitworks_page_enter_code_details">
    This app will generate the code needed to proceed with sign in.
    </string>
    <string name="howitworks_page_verify_device_title">
    Then you\'re signed in.
    </string>
    <string name="howitworks_page_verify_device_details">
    You can also choose to remember the computer and the service won\'t ask you for a code there again.
    </string>
    <string name="button_exit_howitworks_flow">Exit</string>
    <string name="welcome_page_title">
    Thousands of online accounts are hijacked every day.
    </string>
    <string name="welcome_page_details">
    2-step verification protects your accounts even if your password is stolen.
    </string>
    <string name="file_export_title">Export to File</string>
    <string name="file_export_done">Backup finished</string>
    <string name="file_export_filename">Enter a name for the backup file. An .abk extension will automatically be applied</string>
    <string name="file_name">File Name</string>
    <string name="export">Export</string>
    <string name="file_import_title">Import from File</string>
    <string name="import_passphrase">Enter the passphrase used to encrypt the backup. This is case sensitive.</string>
    <string name="import_accounts">Import Accounts</string>
    <string name="import_button">Import</string>
    <string name="import_loaded">Loaded Backup</string>
    <string name="import_successful">Import Successful</string>
    <string name="import_no_accounts">No accounts to import</string>
    <string name="passphrase">Passphrase</string>
    <string name="passphrase_info">Create a passphrase to use to encrypt your backup.
      It must be at least 5 characters and is case sensitive, but the longer it is the more secure it is.\n
      Try using a passphrase instead of just a password - try combining a few easy to remember words.</string>
    <string name="error_json_parsing">Error: Malformed backup file</string>
    <string name="error_wrong_pass">Error: Incorrect passphrase</string>
    <string name="error_processing">Error processing export</string>
    <string name="error_unknown">Unknown error occurred</string>
    <string name="error_generating_code">Error generating code</string>
    <string name="create_account_manually">Manually enter account details:</string>
    <string name="time_based">Time Based</string>
    <string name="counter_based">Counter Based</string>
    <string name="no_name">Enter a valid name</string>
    <string name="swipe_continue">Swipe to continue -></string>
    <string name="edit_account">Edit Account</string>
    <string name="delete_account">Delete Account</string>
    <string name="copied_to_clipboard">Copied to Clipboard</string>
    <string name="invalid_name">Invalid name</string>
    <string name="add_account">Add Account</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="enter_code">Enter Code</string>
</resources>