<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2014 Scott Warner

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="true"
        android:orientation="vertical" >

        <!-- Passphrase stuff -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dip"
            android:text="@string/passphrase_info" />

        <EditText
            android:id="@+id/file_export_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passphrase"
            android:inputType="textPassword" />
        
        <!-- File name stuff -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dip"
            android:text="@string/file_export_filename" />
        
        <EditText
            android:id="@+id/file_export_file"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/file_name"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/file_export_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/export" />
    </LinearLayout>

</ScrollView>